public/src/css/style.css
.big-photo {
  width: 100%;
  height: 740px;
  position: relative;
  margin-top: 80px;
}

.big-photo .photocredit {
  position: absolute;
  bottom: 200px;
  text-align: right;
}

.photo-caption {
  background: rgba(250, 87, 92, 0.9);
  padding: 40px 40px;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.photo-caption p {
  color: rgb(255, 255, 255);
  width: 50%;
  max-width: 600px;
  min-width: 300px;
  text-align: center;
  margin: 0 auto;
  font-size: 16px;
  line-height: 22px;
}

#intro-photo {
  /*background:url(../../img/back.jpg) center top / cover scroll no-repeat;*/

  background: url(../img/intro.jpg) center top / cover scroll no-repeat;
  /*  -webkit-filter: grayscale(100%); filter: grayscale(100%)*/

}

.accessibility-button {
  position: fixed;
  top: 10px;
  right: 20px;
  background: rgb(0, 0, 0);
  background: rgba(0, 0, 0, 0.7);
  width: 50px;
  height: 50px;
  cursor: pointer;
}

.accessibility-button i {
  color: #fff;
  margin: 0;
  position: relative;
  left: 16px;
  top: 13px;
  font-size: 19px;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;

}

.accessibility-button:hover {
  background: rgba(0, 0, 0, 0.9);
}

.accessibility-button:hover i {
  color: #fff;
  top: 5px;
}

.bottom-cloud {
  position: relative;
  bottom: -250px;
  width: 100%;
  transition: opacity 0.5s;
}

.bottom-cloud img {
  position: absolute;
  bottom: 0;
  width: 100%;

}

.scroll-fade-content {
  opacity: 0;
  transform: translateY(50px);
  transition: all 1s ease-out;
}

.scroll-fade-content.fade-in {
  opacity: 1;
  transform: translateY(0);
}



#mainNav {
  min-height: 56px;
  background-color: #FA575C;
}

#mainNav .navbar-toggler {
  font-size: 80%;
  padding: 0.75rem;
  color: #fff;
  border: 1px solid #fff;
}

#mainNav .navbar-toggler:focus {
  outline: none;
}

#mainNav .navbar-brand {
  color: #161616;
  font-weight: 700;
  padding: .9rem 0;
}

#mainNav .navbar-nav .nav-item:hover {
  color: fade(white, 80%);
  outline: none;
  background-color: transparent;
}

#mainNav .navbar-nav .nav-item:active,
#mainNav .navbar-nav .nav-item:focus {
  outline: none;
  background-color: transparent;
}

@media (min-width: 992px) {
  #mainNav {
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: none;
    background-color: transparent;
    -webkit-transition: background-color 0.3s ease-in-out;
    transition: background-color 0.3s ease-in-out;


  }

  #mainNav .navbar-brand {
    padding: .5rem 0;
    color: rgba(255, 255, 255, 0.5);
  }

  #mainNav .nav-link {
    -webkit-transition: none;
    transition: none;
    padding: 2rem 1.5rem;
    color: rgba(255, 255, 255, 0.9);
  }

  #mainNav .nav-link:hover {
    color: rgba(255, 255, 255, 0.75);
  }

  #mainNav .nav-link:active {
    color: white;
  }

  #mainNav.navbar-shrink {
    background-color: #FA575C;
  }

  #mainNav.navbar-shrink .navbar-brand {
    color: #fff;
  }

  #mainNav.navbar-shrink .nav-link {
    color: #fff;
    padding: 1.5rem 1.5rem 1.25rem;
    border-bottom: 0.25rem solid transparent;
  }

  #mainNav.navbar-shrink .nav-link:hover {
    color: #fff;
  }

  #mainNav.navbar-shrink .nav-link:active {
    color: #fff;
  }

  #mainNav.navbar-shrink .nav-link.active {
    color: #fff;
    outline: none;
    border-bottom: 0.25rem solid #fff;
  }

}

.header {
  position: relative;
  width: 100%;
  height: auto;
  min-height: 35rem;
  padding: 15rem 0;

  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616));
  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%);

  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
  overflow: hidden;
}

.header h1 {
  font-family: 'Varela Round';
  font-size: 1.5rem;
  line-height: 1.5rem;
  letter-spacing: 0.8rem;
  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.7));
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.header h2 {
  max-width: 20rem;
  font-size: 1rem;
}

@media (min-width: 768px) {
  .header h1 {
    font-size: 4rem;
    line-height: 4rem;
  }

  .bottom-cloud {
    position: relative;
    bottom: 0px;
    width: 100%;
    transition: opacity 0.5s;
  }


}

@media (min-width: 576px) {
  .bottom-cloud {
    position: relative;
    bottom: 0px;
    width: 100%;
    transition: opacity 0.5s;
  }
}

@media (min-width: 992px) {
  .header {
    height: 100vh;
    padding: 0;
  }

  .header h1 {
    font-size: 6.5rem;
    line-height: 6.5rem;
    letter-spacing: 0.8rem;
  }

  .header h2 {
    max-width: 30rem;
    font-size: 1.25rem;
  }
}

.btn {
  -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  font-family: 'Varela Round';
  font-size: 80%;
  text-transform: uppercase;
  letter-spacing: .15rem;
  border: 0;
}

.btn-primary {
  background-color: #FA575C;
}

.btn-primary:hover {
  background-color: #FA575C;
}

.btn-primary:focus {
  background-color: #FA575C;
  color: white;
}

.btn-primary:active {
  background-color: #FA575C !important;
}

.introduction-section {
  padding-top: 10rem;
  background: #fff;

}

.introduction-section p {
  margin-bottom: 5rem;
}

.protracted-crisis-section {
  padding: 10rem 0;
  background: #fff;

}

.protracted-crisis-section p {
  margin-bottom: 5rem;
}

.protracted-crisis-section .btn {
  margin-bottom: 5rem;
}





.impact-protracted-crisis-section {
  padding-top: 5rem;
  background: #fff;
  margin: 0 15px 5px;
}

.impact-protracted-crisis-section p {
  margin-bottom: 5rem;
}

.opportunity-for-improve-section {
  padding-top: 10rem;
}

.opportunity-for-improve-section p {
  margin-bottom: 5rem;
}

.resources-section {
  padding-top: 10rem;
}

.resources-section p {
  margin-bottom: 5rem;
}



@media (min-width: 992px) {
  .impact-protracted-crisis-section .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #FA575C;
  }
}

.impact-protracted-crisis-section .protracted-text {
  padding: 3rem;
  font-size: 90%;
}

@media (min-width: 992px) {
  .impact-protracted-crisis-section .protracted-text {
    padding: 5rem;
  }

  .impact-protracted-crisis-section .protracted-text hr {
    border-color: #FA575C;
    border-width: .25rem;
    width: 30%;
  }

}

.footer-section {

  padding: 10rem 0;
  background-color: #363636;
  color: rgb(255, 255, 255);
  margin-top: 40px;



}

.resources-section {
  padding: 5rem 0 0;
}

.resources-section .card {
  background: #FAFAFA;

  position: relative;


  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  cursor: pointer;

}

.resources-section .card:hover {
  background: linear-gradient(to right, #FA575C17 0%, #FA575C2b 51%, #FA575C36 100%);
}

.resources-section .card:after {
  display: block;
  background: #2196F3;
  border-top: 2px solid #FA575C;
  content: '';
  width: 100%;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
}

.resources-section .card h4 {
  font-size: 0.8rem;
  font-family: 'Varela Round';
  text-transform: uppercase;
  letter-spacing: 0.15rem;
}

.resources-section .card hr {
  border-color: #FA575C;
  border-width: 0.25rem;
  width: 3rem;
}

.footer-section .social {
  margin: 0 auto;
  padding-bottom: 20px;
}

.footer-section .social a {
  text-align: center;
  height: 3rem;
  width: 3rem;
  background: #fff;
  border-radius: 100%;
  line-height: 3rem;
  color: #FA575C;
}

.footer-section .social a:hover {
  color: rgba(207, 53, 53);
}

.footer-section .social a:active {
  color: #fff;
}


.protracted-section {
  padding: 5rem 0 0;
}

.improve-humanitarian-action {
  padding: 5rem 0 0;
}

body {
  font-family: 'Nunito';
  letter-spacing: 0.0625em;
}

a {
  color: #FA575C;
  cursor: pointer;
}

a:focus,
a:hover {
  text-decoration: none;
  color: #3c6360;
}

.bg-black {
  background-color: #161616 !important;
}

.bg-shade {
  background-color: #F8F8F8 !important;
}

.bg-whdt {
  background-color: #FA575C !important;
}

.bg-primary {
  background-color: #FA575C !important;
}

.text-primary {
  color: #FA575C !important;
}

.container-fluid {
  padding-right: 0;
  padding-left: 0;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
}

footer {
  padding: 5rem 0;
}

